# ari

./: .gitignore  Cargo.toml  README.md  build.rs
crates/claide-vector-db/: Cargo.toml
crates/claide-vector-db/src/: lib.rs
crates/gemini-model/src/: authorization.rs  lib.rs
src/: gemini.rs  main.rs  settings.rs
src/gemini/: authorisation.rs  googleapis.rs
