[package]
name = "claide"
version = "0.5.0"
edition = "2021"

[dependencies]
aho-corasick.workspace = true
anyhow.workspace = true
figment.workspace = true
futures-util.workspace = true
gemini.workspace = true
linkify.workspace = true
mime.workspace = true
reqwest.workspace = true
schemars = "0.8.21"
serde.workspace = true
serde_json.workspace = true
serde_with = "3.11.0"
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tracing.workspace = true
tracing-subscriber.workspace = true
twilight-cache-inmemory = { git = "https://github.com/twilight-rs/twilight", rev = "7c059974f252f391710ae2b51be357bb36184c28", version = "0.16.0-rc.1", features = [
    "permission-calculator",
] }
twilight-gateway = { git = "https://github.com/twilight-rs/twilight", rev = "7c059974f252f391710ae2b51be357bb36184c28", version = "0.16.0-rc.1" }
twilight-http = { git = "https://github.com/twilight-rs/twilight", rev = "7c059974f252f391710ae2b51be357bb36184c28", version = "0.16.0-rc.1" }
twilight-model = { git = "https://github.com/twilight-rs/twilight", rev = "7c059974f252f391710ae2b51be357bb36184c28", version = "0.16.0-rc.1" }
url.workspace = true

[lints]
workspace = true

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
aho-corasick = "1.1"
anyhow = "1"
derive_more = { version = "1", default-features = false, features = [
    "display",
    "error",
    "from",
] }
figment = { version = "0.10", features = ["toml"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
gemini = { version = "0.1.0", path = "crates/gemini" }
gemini-model = { version = "0.1.0", path = "crates/gemini-model" }
claide-vector-db = { version = "0.1.0", path = "crates/claide-vector-db" }
linkify = "0.10"
mime = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
    "brotli",
    "gzip",
    "http2",
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.42"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

[workspace.lints.clippy]
alloc_instead_of_core = "deny"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
